overlays/uksouth-prod/olympus/angelia/blackhole.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: angelia
    component: blackhole
  name: angelia-blackhole
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
