overlays/uksouth-prod/olympus/angelia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
  name: api.${cluster_name}.${cluster_location}.bink.sh-angelia
spec:
  rules:
    - host: api.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: angelia-api
                port:
                  number: 80
          - path: /wallet/payment_account_channel_links
            pathType: Exact
            backend:
              service:
                name: angelia-blackhole
                port:
                  number: 80
  tls:
    - hosts:
        - api.${cluster_name}.${cluster_location}.bink.sh
